--- a/src/GottaCrowWebUI/appsettings.json
+++ b/src/GottaCrowWebUI/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "greeting": "Welcome To [gotta] Crow!",
   "database": {
-    "connection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=OdeToFood"
+    "connection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=JobSearchActivity"
   }
 }
